# storm-framework

./: .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .pyv  CONTRIBUTING.md  README.md  README_ID.md  TREE.md  go.mod  go.sum  private-backup.asc  pyproject.toml  requirements.txt  rootmap.py  setup  setup.ps1  setupdocker  setuplinux  setuptermux  setupvenv  smfstart  smfupdate  storm  trustdb-backup.txt  versi.py  version.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-push.yml  review-app.yml  review-pr.yml  strom_installation_test.yml  windows-installation-testing.yml  windows_testing.yml
app/banners/: banner.py  uib.py
app/base/: check.rs  config_ui.py  config_update.py
app/utility/: colors.py  down_ghunt.py  down_osint.py  restart.py  search.py  spin.py  update.py  utils.py  verify.py
app/utility/module/: down_ghosint.py  down_osint.py
apps/banners/: uib.py
apps/base/: config_ui.py  config_update.py
apps/utility/: colors.py  load_db.py  plugin.py  restart.py  search.py  search_engine.py  spin.py  update.py  utils.py  verify.py
apps/utility/plugin/: utils_plugin.py  utils_plugin.pyxy
assets/wordlist/: poc-content.txt  port.json  port.txt  subdomain.txt  userpass.py
data/: data.json  data_python.json  data_version.json  install_dep.py  smf_ca.crt  smf_ca.key
data/option/: session.py
docs/: README.md
docs/storm-framework.wiki/: ARCHITECTURE.md  CALLER_BINARY.md  INSTALLATION_DOCKER.md  INSTALLATION_LINUX.md  INSTALLATION_TERMUX.md  INSTALLATION_VENV.md  LOGGER.md  MODULE_GUIDE.md  STORM_TRANSPORT_LAYER_SECURITY.md  installation.md
example/: excve.py  exmod.py  explugin.py
example/logging/: examples_print_log.py
example/makefile/: makefile-c  makefile-go  makefile-go-re  makefile-rust  makefile-rust-so
example/makefile/hardware_optimization/: makefile-C  makefile-Go  makefile-Rust  makefile-Rust-so
example/metadata/: metadata.py
example/module/: excve.py  exmod.py
example/plugin/: example_plugin_get.py  explugin.py
example/stls/: example_stls.go  example_stls.py
internal/: README.md
internal/source/modules/: Makefile
lib/: README.md
lib/core/: handler.py
lib/core/commands/: about.py  back.py  clear.py  down.py  exit.py  export.py  help.py  info.py  load.py  plugin.py  run.py  search.py  set.py  show.py  storm.py  take.py  unload.py  use.py
lib/roar/: cache.py  calling.py  plugin.py  plugin_api.py  plugins.py  tls.py  utils_cache.py
lib/roar/callbin/: calling.py  manager.py
lib/roar/logging/: Cargo.toml  Makefile
lib/roar/logging/src/: converters.rs  core.rs  database.rs  errors.rs  lib.rs  parallel.rs  telemetry.rs  writer.rs
lib/roar/plugin/: introspection.py  manager.py  monitor.py  monitoring.py  safe.py  storage.py
lib/roar/stls/: Cargo.toml  Makefile  build.rs
lib/roar/stls/src/: lib.rs
lib/roar/stls/src/http2/: fingerprint.rs  mod.rs
lib/roar/stls/src/tls/: builder.rs  ciphers.rs  extensions.rs  mod.rs  stream.rs
lib/smf/core/booting/: boot.py
lib/smf/core/console/: engine.py  runtime.py
lib/smf/core/db/: Cargo.toml
lib/smf/core/engine/: Cargo.toml  Makefile  check.rs
lib/smf/core/engine/src/: verified.rs
lib/smf/core/sf/: ldch.py  svch.py
lib/smf/core/verify/: Cargo.toml  Makefile
lib/smf/core/verify/src/: verified.rs  verified_v1.rs
lib/smf/ssl/: netssl.py
lib/smfdb_helpers/: log_utils.py
lib/sqlite/storage/: storm.db
lib/ui/: banner.py
lib/ui/banners/: data1.py  data2.py  data3.py
lib/ui/console/: data1.py
modules/: README.md
modules/auxiliary/: api_openai.py  example_mod.py  test.py  test_waf_evasion.py  testd.py
modules/auxiliary/brute/ftp/: ftp_brute.py  ftp_login_brute.py
modules/auxiliary/brute/hash/: md5_crypt.py
modules/auxiliary/brute/ssh/: ssh_brute.py
modules/auxiliary/brute/telnet/: telnet_brute.py
modules/auxiliary/brute/web/grafana/: grafana_brute.py
modules/auxiliary/dos/ftp/: ftp_dos.py
modules/auxiliary/dos/ftp/src/: Makefile  ftp_flood.go
modules/auxiliary/dos/http/: http2_bomb.py  poc.py
modules/auxiliary/dos/smtp/: smtp_dos.py
modules/auxiliary/dos/smtp/src/: Makefile  smtp_flood.go
modules/auxiliary/fuzzers/dns/: dns_sub_enumeration.py  sub_enum.py
modules/auxiliary/fuzzers/http/: http_path_enumeration.py  path_enum.py  pathenum.py
modules/auxiliary/osint/email/: ghosint.py  ghunt.py  osint.py
modules/auxiliary/proxy/http/: http_proxy.py
modules/auxiliary/proxy/http/src/: Makefile  http_prox.go
modules/auxiliary/proxy/https/: https_proxy.py
modules/auxiliary/scanner/fortinet/: forti_api_scan.py  forti_bypass.py
modules/auxiliary/scanner/net/: dns.py  pathenum.py  scan_dns_re.py  scan_net.py  scan_port.py  subdomain.py  subenum.py  web_head.py  whois_dom.py  whois_ip.py
modules/auxiliary/sniffer/: dpispy.py
modules/auxiliary/sniffer/src/: Makefile  dpi_netspy.go
modules/auxiliary/splunk/PostgreSQL/: CVE-2026-20253.py  sp_psql_20253.py
modules/auxiliary/voip/: rtp_sniff.py  sip_dos.py  sip_scan.py
modules/auxiliary/voip/src/: Makefile
modules/auxiliary/voip/src/scan/: voip_scan.go
modules/exploit/: example_mod.py
modules/exploit/android/adb/: poc-cve-2026-0073.py  rce_wireless_adb.py
modules/exploit/bac/: firebase_db.py  firebase_fs.py
modules/exploit/http/Splunk/: cve-2026-20253.py  rc_spe_20253.py
modules/exploit/web/bac/firebase/: db.py  fs.py
modules/vulnerability/: example_cve.py
modules/vulnerability/asn/: cve_2026_23490.py
modules/vulnerability/fortinet/: cve_2024_55591.py
modules/vulnerability/oracle/: cve_2026_21975.py
modules/vulnerability/smb/: cve_2017_0144.py
modules/vulnerability/zte/: cve_2014_2321.py
plugin/: demo_plug.py  multi_decoder.py  test.py  testing.py
plugin/cache/: utils_cache.py
plugin/caching/: utils_cache.py
scripts/cpl/: advcore.py  compiler.py  ioname.py
scripts/security/: Cargo.toml  Makefile  sign.py
scripts/security/src/: integrity.rs
scripts/wrapper/: stls.py
scripts/wrapper/stls_go/: Makefile  stls.go
tests/: test_modules.py
(+15 files in other folders)
