[project]
name = "storm-framework"
version = "3.5.11"
readme = "README.md"
requires-python = ">=3.12"
author = [
    {
     name = "Elzy",
     email = "elzyproot@protonmail.com"
    }
]
dependencies = [
    "cryptography>=42.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

# Forcefully override .gitignore rules
include = '(app/|modules/|lib/).*\.py$'

# Keep the metadata folder safe
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | lib/smf/core/db/vendor
)/
'''

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "assets", "lib", "modules", "script"]
