[project]
name = "Storm-Framework"
version = "3.8"
authors = [
    {name = "エルジー", email = "elzyproot@protonmail.com"}
]
description = "Just a Storm Framework"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GPL License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cryptography>=46.0.4",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
    "colorama>=0.4.6",
    "python-nmap>=0.7.1",
    "python-whois>=0.9.6",

    "dnspython>=2.8.0",
    "paramiko>=4.0.0",
    "scapy>=2.7.0",

    "ipwhois>=1.3.0",
    "ipaddress>=1.0.23",
    "whoisdomain>=1.20260106.1",
    "telnetlib3>=4.0.0",
]
keywords=["storm", "pentest", "cybersecurity", "security-research", "pentesting-tools"]

[project.urls]
"Home page" = "https://github.com/StormWorld0/storm-framework"
"Discussion" = "https://github.com/StormWorld0/storm-framework/discussions"
"Bug Reports" = "https://github.com/StormWorld0/storm-framework/issues"
"wiki" = "https://github.com/StormWorld0/storm-framework/wiki"

"Documentation" = "https://github.com/StormWorld0/storm-framework/docs"
"Installation" = "https://github.com/StormWorld0/storm-framework/blob/main/docs/storm-framework.wiki/installation.md"
"Logger" = "https://github.com/StormWorld0/storm-framework/blob/main/docs/storm-framework.wiki/logger.md"

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | .*/vendor/.*
    | example/
)/
'''

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["script"]
