[project]
name = "Storm-Framework"
version = "3.10"
authors = [
    {name = "エルジー", email = "elzyproot@protonmail.com"}
]
description = "Just a Storm Framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GPL License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords=["storm", "pentest", "cybersecurity", "security-research", "pentesting-tools"]

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | .*/vendor/.*
    | example/
)/
'''

[tool.pyrefly]
python_path = ["."]

[tool.pyright]
executionEnvironments = [
  { root = "." }
]

[tool.mypy]
mypy_path = "."
