[package]
name = "Storm-Framework"
version = "0.1.0"
edition = "2024"

[lib]
name = "stls"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = "1.0"
http = "1.0"
h2 = "0.4"
bytes = "1.5"
libc = "0.2"
serde_json = "1.0"

# LIBRARY CLOUDFLARE DIHAPUS:
# boring = "4.4.0" (Dihapus)
# tokio-boring = "4.4.0" (Dihapus)

[build-dependencies]
cmake = "0.1"
bindgen = "0.69"

[profile.release]
lto = true            
codegen-units = 1     
panic = "abort"       
strip = true          
