[package]
name = "Storm-Framework"
version = "0.1.0"
edition = "2021"

[lib]
name = "stls"
crate-type = ["cdylib"]

[dependencies]
# CORE ASYNC & NETWORKING
# Menggunakan "full" aman, tapi jika ingin binary lebih kecil, 
# bisa spesifik: ["rt-multi-thread", "macros", "net", "io-util", "sync"]
tokio = { version = "1", features = ["full"] }
h2 = "0.4"
http = "1.0"
bytes = "1.5"
# DATA HANDLING
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
# SYSTEM & FFI
libc = "0.2"
anyhow = "1.0" 

[build-dependencies]
# Alur build native Google BoringSSL
cmake = "0.1"
bindgen = "0.70.1"

[profile.release]
lto = true            # Optimasi lintas crate (Link Time Optimization)
codegen-units = 1     # Maksimalisasi optimasi biner (mengurangi paralelisme kompilasi)
panic = "abort"       # Memperkecil ukuran biner & mempercepat crash handling
# strip = true          # Menghapus simbol debug (Wajib untuk cdylib agar file .so ringan)
opt-level = "z"       # Fokus pada ukuran biner terkecil (opsional, gunakan "3" jika butuh speed murni)
