[package]
name = "storm-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "verified"
path = "src/verified.rs"

[dependencies]
sha2 = "0.10"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.21"

# These are the required dependencies
# by verified.rs as a backup if verified_v1.rs is already
# feels slow because of the large number of files.
# rayon = "1"
